--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,9 +1,14 @@
-<resources>
-    <string name="app_name">AndroidDemo</string>
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <string name="app_name">Machine Learning</string>
+    <string name="signin">Sign in</string>
+    <string name="cancel">Cancel</string>
     <string name="message">Your message</string>
+    <string name="analysis">XEM PHÂN TÍCH CHI TIẾT</string>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="design_navigation_icon_size" tools:override="true">40dp</dimen>
+
 </resources>
